fixed bg flipping and horizontal scroll bar popup

--- a/css/creative.css
+++ b/css/creative.css
@@ -482,3 +482,6 @@ header.masthead {
 
 .btn-xl {
   padding: 15px 30px; }
+
+.panel-body {
+  width: 100% !important; }
